src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>DW_Password__c</fullName>
        <description>DriveWealth Password</description>
        <inlineHelpText>DriveWealth Password</inlineHelpText>
        <label>DW Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DW_Total_Practice_Accounts__c</fullName>
        <label>DW Total Practice Accounts</label>
        <summaryForeignKey>DW_Account__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DW_User_ID__c</fullName>
        <description>DriveWealth User ID</description>
        <externalId>true</externalId>
        <inlineHelpText>DriveWealth User ID</inlineHelpText>
        <label>DW User ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DW_Username__c</fullName>
        <description>DriveWealth Username</description>
        <inlineHelpText>DriveWealth Username</inlineHelpText>
        <label>DW Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
</CustomObject>